Fix off-center slider image

--- a/style.css
+++ b/style.css
@@ -339,6 +339,7 @@ body {
 .slider .scroll-container {
     overflow-x: hidden;
     height: fit-content;
+    box-shadow: inset 0 0 10px 0 #fff;
 }
 
 .slider-button {
